<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_name"
            android:textColor="#000000"
            android:textSize="20sp" />
        <!--<android.support.v7.widget.AppCompatAutoCompleteTextView
            android:id="@+id/autoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Keyword"
            android:textColor="#000000"
            android:textColorHint="#000000" />-->

        <android.support.v7.widget.AppCompatAutoCompleteTextView
            android:id="@+id/auto_complete_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:inputType="text"
            android:maxLines="1" />

        <!--<TextView
            android:id="@+id/selected_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/auto_complete_edit_text"
            android:layout_marginTop="50dp"
            android:padding="20dp"/>-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/categorySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/category_types" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/unitSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/unit_types"
            android:prompt="@string/unit_prompt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textColor="#000000"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/fromRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/current_location" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other_location" />

        </RadioGroup>

        <android.support.v7.widget.AppCompatAutoCompleteTextView
            android:id="@+id/location_auto_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:hint="@string/location_hint"
            android:inputType="text"
            android:maxLines="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/search" />

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clear" />


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>